cmake_minimum_required(VERSION 3.11)

project(task)
set (CMAKE_CXX_STANDARD 11)

enable_testing()

#------------------------------------------------------------------------------
# Download and unpack googletest at configure time
#------------------------------------------------------------------------------

include(cmake/utils.cmake)
import_glfw()

#------------------------------------------------------------------------------
# add utils
#------------------------------------------------------------------------------

add_subdirectory(script)

#------------------------------------------------------------------------------
# add dependance library
#------------------------------------------------------------------------------

add_subdirectory(deps)
include_directories(deps/include)

#------------------------------------------------------------------------------
# add src library
#------------------------------------------------------------------------------

add_subdirectory(src)
